--- a/index.html
+++ b/index.html
@@ -1077,12 +1077,12 @@
        <div class="nav-section-title">Tools</div>
       <!-- Nav items will be appended here -->
 
-      <a class="nav-item ripple" href="http://dev.wuaze.com/gitHub/snippets/" data-link="dynamic" data-area="page-container">
+      <a class="nav-item ripple" href="./snippets/" data-link="dynamic" data-area="page-container">
        <span class="nav-item-icon"></span>
        <span class="nav-item-text">Snippets</span>
       </a>
 
-      <a class="nav-item ripple" href="http://dev.wuaze.com/gitHub/colours/" data-link="dynamic" data-area="page-container">
+      <a class="nav-item ripple" href="./colours/" data-link="dynamic" data-area="page-container">
        <span class="nav-item-icon"></span>
        <span class="nav-item-text">Snippets</span>
       </a>
@@ -1114,7 +1114,7 @@
    <div class="main-content" id="main-content">
     <!-- Pages will be dynamically loaded here -->
     <div id="page-container"></div>
-    <iframe id="dynamiciFrame" src="http://dev.wuaze.com/gitHub/myLibrary/index.html" style="border: 0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" allowfullscreen></iframe>
+    <iframe id="dynamiciFrame" src="./myLibrary/index.html" style="border: 0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" allowfullscreen></iframe>
    </div>
 
    <!-- Overlay -->
