--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
    <div class="main-content" id="main-content">
     <!-- Pages will be dynamically loaded here -->
     <div id="page-container"></div>
-    <iframe id="dynamiciFrame" src="./myLibrary/index.html" style="border: 0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" allowfullscreen></iframe>
+    <iframe id="dynamiciFrame" src="./snippets/" style="border: 0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" allowfullscreen></iframe>
    </div>
 
    <!-- Overlay -->
