--- a/index.html
+++ b/index.html
@@ -2714,6 +2714,14 @@
    }
    document.addEventListener("DOMContentLoaded", initApp);
   </script>
+
+
+
+
+
+
+
+  
  <script>
 document.addEventListener("DOMContentLoaded", () => {
   const iframe = document.getElementById("dynamiciFrame");
@@ -2759,10 +2767,17 @@ document.addEventListener("DOMContentLoaded", () => {
     };
 
     iframe.src = url;
-    history.pushState(null, "", url);
+   // history.pushState(null, "", url);
   });
 });
  </script>
+
+
+
+
+
+  
+  
   <script>
    if ("serviceWorker" in navigator) {
     window.addEventListener("load", () => {
