--- a/index.html
+++ b/index.html
@@ -1068,12 +1068,12 @@
        <div class="nav-section-title">Tools</div>
       <!-- Nav items will be appended here -->
 
-      <a class="nav-item ripple" href="./snippets.html" data-link="dynamic" data-area="page-container">
+      <a class="nav-item ripple" href="https://antagoniise.github.io/codeCloud/snippets.html" data-link="dynamic" data-area="page-container">
        <span class="nav-item-icon"></span>
        <span class="nav-item-text">Snippets</span>
       </a>
 
-      <a class="nav-item ripple" href="./colours.html" data-link="dynamic" data-area="page-container">
+      <a class="nav-item ripple" href="https://antagoniise.github.io/codeCloud/colours.html" data-link="dynamic" data-area="page-container">
        <span class="nav-item-icon"></span>
        <span class="nav-item-text">Snippets</span>
       </a>
