--- a/snippets.html
+++ b/snippets.html
@@ -2049,7 +2049,7 @@ input:checked + .switch-slider:before {
      const snippetId = $snippetCard.data("id");
 
      $.ajax({
-      url: "./snippets.php",
+      url: "https://antagoniise.github.io/codeCloud/snippets.php",
       type: "GET",
       data: { action: "get", id: snippetId },
       dataType: "json",
@@ -2078,7 +2078,7 @@ input:checked + .switch-slider:before {
      const snippetId = $snippetCard.data("id");
 
      $.ajax({
-      url: "./snippets.php",
+      url: "https://antagoniise.github.io/codeCloud/snippets.php",
       type: "GET",
       data: { action: "get", id: snippetId },
       dataType: "json",
@@ -2119,7 +2119,7 @@ input:checked + .switch-slider:before {
      const newTitle = prompt("Enter new title:", currentTitle);
      if (newTitle && newTitle !== currentTitle) {
       $.ajax({
-       url: "./snippets.php",
+       url: "https://antagoniise.github.io/codeCloud/snippets.php",
        type: "POST",
        data: {
         action: "update",
@@ -2190,7 +2190,7 @@ input:checked + .switch-slider:before {
     // CRUD Functions
     function loadSnippets() {
      $.ajax({
-      url: "./snippets.php",
+      url: "https://antagoniise.github.io/codeCloud/snippets.php",
       type: "GET",
       data: { action: "list" },
       dataType: "json",
@@ -2214,7 +2214,7 @@ input:checked + .switch-slider:before {
 
     function saveSnippet(title, language, code, callback) {
      $.ajax({
-      url: "./snippets.php",
+      url: "https://antagoniise.github.io/codeCloud/snippets.php",
       type: "POST",
       data: {
        action: "create",
@@ -2241,7 +2241,7 @@ input:checked + .switch-slider:before {
 
     function updateSnippet(id, title, language, code, callback) {
      $.ajax({
-      url: "./snippets.php",
+      url: "https://antagoniise.github.io/codeCloud/snippets.php",
       type: "POST",
       data: {
        action: "update",
@@ -2269,7 +2269,7 @@ input:checked + .switch-slider:before {
 
     function deleteSnippet(id, $snippetCard) {
      $.ajax({
-      url: "./snippets.php",
+      url: "https://antagoniise.github.io/codeCloud/snippets.php",
       type: "POST",
       data: { action: "delete", id: id },
       dataType: "json",
