--- a/snippets.html
+++ b/snippets.html
@@ -25,7 +25,7 @@
   <!-- Phosphor Icons -->
   <link href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/fill/style.css" rel="stylesheet" type="text/css" />
 
-  <link href="http://dev.wuaze.com/styleSheets/mobile.css" rel="stylesheet" type="text/css" />
+  <link href="https://dev.wuaze.com/styleSheets/mobile.css" rel="stylesheet" type="text/css" />
 
 
 <style>
