--- a/index.html
+++ b/index.html
@@ -978,6 +978,19 @@ document.addEventListener('DOMContentLoaded', function() {
     app.init();
     window.app = app;
 });
+
+
+document.addEventListener("DOMContentLoaded", function() {
+  var iframe = document.getElementById("dynamiciFrame");
+  var loadingOverlay = document.getElementById("loading-overlay");
+
+  if (iframe && loadingOverlay) {
+    iframe.addEventListener("load", function() {
+      loadingOverlay.classList.remove("active");
+      loadingOverlay.style.display = "none";
+    });
+  }
+});   
 </script>
 
     <!-- Progressive Web App -->
